2007-11-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (default_labels): Describe entry for
	Teredo tunnels.
	* posix/gai.conf: Update for current default tables.

2007-11-19  Ulrich Drepper  <drepper@redhat.com>

	* po/tr.po: Update from translation team.

2007-11-18  Roland McGrath  <roland@frob.com>

	* manual/arith.texi (Remainder Functions): Spelling fix.
	From Shaun Silk <genix@mysoul.com.au>.

	* sysdeps/mach/hurd/bits/fcntl.h (O_CLOEXEC): Fix value.

2007-11-17  Ulrich Drepper  <drepper@redhat.com>

	* po/zh_CN.po: Update from translation team.

	* sysdeps/unix/sysv/linux/Makefile [subdir=misc] (sysdep_headers):
	Add sys/signalfd.h and sys/eventfd.h.

2007-11-15  Bruno Haible  <bruno@clisp.org>

	[BZ #5346]
	* intl/dcigettext.c (struct known_translation_t): Turn msgid into a
	union.
	(transcmp): Use the appropriate part of s1->msgid and s2->msgid.
	(DCIGETTEXT): Change the allocation of the 'search' variable so that
	it needs only fixed stack space. Delay the initialization of
	msgid_len until it is needed.

2007-11-15  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/dbl-64/sincos.tbl: Fix size of union.
	Reported by Christoph Quirin Lauter <christoph.lauter@ens-lyon.fr>.

2007-11-15  Ulrich Drepper  <drepper@redhat.com>

	* po/ko.po: Update from translation team.

2007-11-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/check_native.c (__check_native): Simplify
	significantly.  The device type is also part of the ifinfomsg data.

	* po/sv.po: Update from translation team.
	* po/nl.po: Likewise.

	* nscd/cache.c (prune_cache): If cache is empty, instruct caller
	to wake up in 24 hours.

	* nscd/gai.c (__ioctl): Define.  Include check_native.c.

2007-11-13  Ulrich Drepper  <drepper@redhat.com>

	* po/cs.po: Update from translation team.
	* po/pl.po: Likewise.

	* include/ifaddrs.h: Remove in6ai_temporary.
	(struct in6addrinfo): Add index element.
	Declare __check_native.
	* inet/Makefile (aux): Add check_native.