@@ -52,3 +52,17 @@
 #    For sites which prefer IPv4 connections change the last line to
 #
 #precedence ::ffff:0:0/96  100
+
+#
+# scopev4  <mask>  <value>
+#    Add another rule to the RFC 3484 scope table for IPv4 addresses.
+#    By default the scope IDs described in section 3.2 in RFC 3484 are
+#    used.  Changing these defaults should hardly ever be necessary.
+#    The defaults are equivalent to:
+#
+#scopev4 ::ffff:169.254.0.0/112  2
+#scopev4 ::ffff:127.0.0.0/104    2
+#scopev4 ::ffff:10.0.0.0/104     5
+#scopev4 ::ffff:172.16.0.0/108   5
+#scopev4 ::ffff:192.168.0.0/112  5
+#scopev4 ::ffff:0.0.0.0          14
